# snakelog

./: .gitignore  README.md  pyproject.toml
alitssaas/: common.py  litelog.py  souffle.py
docs/: api.rst  conf.py  index.rst  notes.md  requirements.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt
litelog/: .gitignore  Makefile  README.md  lex.litelog.c  lex.litelog.h  litelog.c  parser.tab.c  parser.tab.h  parser.y  scanner.l  test.c
snakelog/: __init__.py  common.py  egglog.py  litelog.py  souffle.py  z3lite.py
tests/: progs.py  test_egglog.py  test_litelog.py  test_souffle.py
