[tool.poetry]
name = "alitssaas"
version = "0.1.0"
description = ""
authors = ["Philip Zucker <philzook58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.7"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
